# exotic-containers

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app_main.cpp
docs/: CMakeLists.txt
include/: array.hpp
include/core/: log.hpp  pointer.hpp  serializer.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  memory.hpp  test_pointer.cpp  test_serializer.cpp
